@startuml GetTagsClassDiagram
!include doc/SDS/CommonClassDiagram/PaginateData.plantuml
!include doc/SDS/CommonClassDiagram/ResultAndError.plantuml
!include doc/SDS/CommonClassDiagram/Recipe/RecipeDbContext.plantuml
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
skinparam classAttributeIconSize 0
hide circle

class BaseApiController {
    #_sender: ISender
    #_httpContextAccessor: HttpContextAccessor
}

class RecipeController {
    +GetTag([FromBody] GetTagsDTO getTagsDTO): async Task<IActionResult>
}

class GetTagsQuery {
    +Skip: int
    +Keyword: string?
    +TagCodes: List<string>?
    +Category: string
}

class GetTagsQueryHandler {
    -_context: IApplicationDbContext
    -_paginateDataUtility: IPaginateDataUtility
    +Handle(GetTagsQuery request, CancellationToken cancellationToken): async Task<Result<PaginatedTagListResponse?>> 
}

class PaginatedTagListResponse{
}
class BasePaginatedResponse{
    +PaginatedData : IEnumerable<Type>
    +Metadata: MetadataType?
}
PaginatedTagListResponse --|> BasePaginatedResponse

class GetTagsDTO{
    +Skip: int
    +Keyword: string?
    +TagCodes: List<string>?
    +Category: string
}

class TagError {
    {static} +NotFound: Error
    {static} +AddTagFail: Error
    {static} +DeleteTagFail: Error
    {static} +UpdateTagFail: Error
}

' =========== Library class ===========
interface "IRequest<TResponse>" #black;line:white;text:white
interface "IRequestHandler<TRequest, TResponse>" #black;line:white;text:white
' =========== Library class ===========

RecipeController --|> BaseApiController
RecipeController "1"--"1" GetTagsDTO
RecipeController "1"--"1" GetTagsQuery

GetTagsQuery --|> "IRequest<TResponse>"

GetTagsQueryHandler --|> "IRequestHandler<TRequest, TResponse>"
GetTagsQueryHandler "1"--"1" GetTagsQuery
GetTagsQueryHandler "1"--"1" Result
GetTagsQueryHandler "1"--"1" PaginatedTagListResponse
GetTagsQueryHandler "1" o-- "1" IApplicationDbContext
GetTagsQueryHandler "1" o-- "1" IPaginateDataUtility
GetTagsQueryHandler "1"--"1..*" TagError

Error "1" --"1..*" TagError
@enduml